# AIDog

./: .gitignore  DEMO_SCRIPT.md  README.md  docker-compose.yml  personalized_observability_copilot.md  prompt.md  run_tests.sh
backend/: .env  .env.example  agentcore_deploy.py  app.db  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agentcore/: __init__.py  gateway.py  memory.py  runner.py
backend/app/agents/: base.py  behavior_miner.py  guided_steps.py  hypothesis_ranker.py  incident_summarizer.py  recommendation_designer.py  test_plan.py
backend/app/core/: config.py  dependencies.py  logging.py  minimax_client.py
backend/app/db/: models.py  seed.py  session.py
backend/app/integrations/: datadog_mcp.py  testsprite.py  toto_forecaster.py
backend/app/integrations/mock_data/: __init__.py  generator.py  scenarios.json
backend/app/routes/: auth.py  home.py  incidents.py  memory.py  recommendations.py  tests.py
backend/app/schemas/: agents.py  api.py  toto.py
backend/app/services/: investigation_service.py  memory_service.py
backend/datadog_copilot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_agentcore.py  test_api.py  test_datadog.py  test_setup.py  test_toto.py
demo-service/: main.py  requirements.txt  setup_monitors.py  start.sh  traffic.py
frontend/: jest.config.js  jest.setup.ts  package-lock.json  package.json  tailwind.config.js
testsprite_tests/: TC001_Install__Setup_happy_path_uv_sync_and_Playwright_Chromium_install_succeed.py  TC031_Login_and_reach_authenticated_Home_dashboard.py  (+35 more)
(+34 files in other folders)
